[package]
name = "nrf52-radio-802154"
version = "0.0.2"
authors = ["Erik Svensson <erik.public@gmail.com>"]
categories = [ "hardware-support", "embedded", "no-std", ]
description = "IEEE 802.15.4 mode nRF52840 radio"
keywords = [ "nrf52840", "nrf52", "ieee802154", "WPAN" ]
license = "MIT"
readme = "README.md"
repository="https://github.com/blueluna/nrf32-verktyg"
documentation = "https://docs.rs/nrf52-radio-802154"
edition = "2018"

[dependencies]
ieee802154 = { git = "https://github.com/braun-embedded/rust-ieee802.15.4.git", branch = "master" }

[dependencies.nrf52833-pac]
optional = true
version = "0.9.0"

[dependencies.nrf52840-pac]
optional = true
version = "0.9.0"

[features]
doc = []
52833 = ["nrf52833-pac"]
52840 = ["nrf52840-pac"]
